<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/holo_orange_light"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@android:color/holo_orange_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:padding="12dp">

            <TextView
                android:id="@+id/lipstick_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lipstick_id"
                android:textColor="#000"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lipstick_name_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/name_lipstick"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/lipstick_id_txt"
                app:layout_constraintTop_toTopOf="@+id/lipstick_id_txt" />

            <TextView
                android:id="@+id/lipstick_company_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company_lipstick"
                app:layout_constraintStart_toStartOf="@+id/lipstick_name_txt"
                app:layout_constraintTop_toBottomOf="@+id/lipstick_name_txt" />

            <TextView
                android:id="@+id/lipstick_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lipstick_price"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>